<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.edittask.EditTaskFragment">

        <EditText
            android:id="@+id/edt_task_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_task_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:lines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_task_title_edit" />


        <ImageButton
            android:id="@+id/ib_date_picker_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/date_picker"
            android:src="@drawable/calender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_task_description_edit" />

        <ImageButton
            android:id="@+id/ib_time_picker_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/time_picker"
            android:src="@drawable/watch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_date_picker_edit" />

        <TextView
            android:id="@+id/tv_task_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/rounded_text"
            android:backgroundTint="@color/light_grey"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/the_date_of_the_task"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_date_picker_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ib_date_picker_edit"
            app:layout_constraintTop_toTopOf="@+id/ib_date_picker_edit" />

        <TextView
            android:id="@+id/tv_task_time_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/rounded_text"
            android:backgroundTint="@color/light_grey"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/the_time_of_the_task"
            android:textColor="@color/red"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_time_picker_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ib_time_picker_edit"
            app:layout_constraintTop_toTopOf="@+id/ib_time_picker_edit" />

        <Button
            android:id="@+id/btn_save_task_edit"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/save_edits"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel_edit"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel_edit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cancel_edit"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_time_edit" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>